# Certificate-Hack

./: convertor.py  names.csv  pdf.py  pyproject.toml
archive/fonts/: image.py
archive/iamge_utils/: elements.py  remover.py
iamge_utils/: main.py
unverified/: generator.py  names.csv
website/: generator.py  main.py
website/database/: certificates.db
website/templates/: index.html
